--- a/resources/views/dashboard/buy.edge
+++ b/resources/views/dashboard/buy.edge
@@ -22,7 +22,7 @@
               <input class="d-none" value="{{offer.currency}}" name="c">
               <input class="d-none" value="{{offer.offer_id}}" name="yout">
               <div class="row">
-                <div class="col">
+                <div class="col-lg">
                   <label class="label ml-3" for="coin">Enter amount:</label>
                   <div class="input-group mb-5">
                     <input type="text" class="form-control form-group-sm ml-3"  aria-label="Recipient's username" aria-describedby="basic-addon2" id="coin" name="coin" required>
@@ -31,10 +31,10 @@
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-lg">
                   <label class="label" for="currency">Enter amount:</label>
                   <div class="input-group mb-5 mr-5">
-                    <input type="text" class="form-control form-control-sm"  aria-label="Recipient's username" aria-describedby="basic-addon2" id="currency" name="currency" required>
+                    <input type="text" class="form-control form-control-sm ml-3"  aria-label="Recipient's username" aria-describedby="basic-addon2" id="currency" name="currency" required>
                     <div class="input-group-append mr-3">
                       <span class="input-group-text" id="basic-addon6">{{offer.currency}}</span>
                     </div>
