--- a/resources/views/partials/footer.edge
+++ b/resources/views/partials/footer.edge
@@ -139,3 +139,11 @@
 
   multiCheck(c3);
 </script>
+<script src="/socket/dist/socket.io.js" rel="script"></script>
+<script src="/online/o.js"></script>
+<script>
+  const Ws = io();
+  Ws.on('connect', () => {
+    console.log('success')
+  });
+</script>
