working on chats

--- a/resources/views/dashboard/buy.edge
+++ b/resources/views/dashboard/buy.edge
@@ -32,7 +32,7 @@
                   </div>
                 </div>
                 <div class="col-lg">
-                  <label class="label" for="currency">Enter amount:</label>
+                  <label class="label ml-3" for="currency">Enter amount:</label>
                   <div class="input-group mb-5 mr-5">
                     <input type="text" class="form-control form-control-sm ml-3"  aria-label="Recipient's username" aria-describedby="basic-addon2" id="currency" name="currency" required>
                     <div class="input-group-append mr-3">
