--- a/resources/views/dashboard/chat.edge
+++ b/resources/views/dashboard/chat.edge
@@ -7,62 +7,10 @@
   <div class="layout-px-spacing">
       <div class="chat-section layout-top-spacing">
         <div class="row">
-
           <div class="col-xl-12 col-lg-12 col-md-12">
-
+            <input class="d-none" id="token" value="{{id}}">
             <div class="chat-system">
-              <div class="hamburger"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu mail-menu d-lg-none"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></div>
-              <div class="user-list-box">
-                <div class="search">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
-                  <input type="text" class="form-control" placeholder="Search" />
-                </div>
-                @if(owner)
-                <div class="people">
-
-                  <div class="person" data-chat="person6">
-                    <div class="user-info">
-                      <div class="f-head">
-                        <img src="/images/chat.png" alt="avatar">
-                      </div>
-                      <div class="f-body">
-                        <div class="meta-info">
-                          <span class="user-name" data-name="Nia Hillyer">{{buyer}}</span>
-                          <span class="user-meta-time">{{time}}</span>
-                          <input class="d-none" value="{{id}}" id="token">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
-                @else
-                <div class="people">
-
-                  <div class="person" data-chat="person6">
-                    <div class="user-info">
-                      <div class="f-head">
-                        <img src="/images/chat.png" alt="avatar">
-                      </div>
-                      <div class="f-body">
-                        <div class="meta-info">
-                          <span class="user-name" data-name="Nia Hillyer">{{seller}}</span>
-                          <span class="user-meta-time">{{time}}</span>
-                          <input class="d-none" value="{{id}}" id="token">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
-                @endif
-              </div>
-              <div class="chat-box">
-
-                <div class="chat-not-selected">
-                  <p> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg> Click User To Chat</p>
-                </div>
-
+              <div class="chat-box" style="height: calc(100vh - 203px)">
                 <div class="overlay-phone-call">
                   <div class="">
                     <div class="calling-user-info">
@@ -120,9 +68,18 @@
                   </div>
                 </div>
 
-                <div class="chat-box-inner">
-                  <div class="chat-meta-user">
-                    <div class="current-chat-user-name"><span><img src="assets/img/90x90.jpg" alt="dynamic-image"><span class="name"></span></span></div>
+                <div class="chat-box-inner" style="height:100%">
+                  <div class="chat-meta-user chat-active">
+                    <div class="current-chat-user-name"><span><img src="/images/chat.png" alt="dynamic-image">
+                       @if(owner)
+                      <span class="name">{{buyer}}</span>
+                      <input class="d-none" id="real_me" value="{{seller}}">
+                      @else
+                       <span class="name">{{seller}}</span>
+                      <input class="d-none" id="real_me" value="{{buyer}}">
+                      @endif
+                    </span>
+                    </div>
 
                     <div class="chat-action-btn align-self-center">
                       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone  phone-call-screen"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
@@ -140,10 +97,10 @@
                       </div>
                     </div>
                   </div>
-                  <div class="chat-conversation-box">
+                  <div class="chat-conversation-box chat-active">
                     <div id="chat-conversation-box-scroll" class="chat-conversation-box-scroll">
                       @if(chat.length!==0)
-                      <div class="chat" data-chat="person6">
+                      <div class="chat active-chat" data-chat="person6">
                         <div class="conversation-start">
                           <span>Monday, 1:27 PM</span>
                         </div>
@@ -167,36 +124,35 @@
                         </div>
                       </div>
                       @else
-                      <div class="chat" data-chat="person6">
+                      <div class="chat active-chat" data-chat="person6">
                       <div class="conversation-start">
                         <span>No data</span>
                       </div>
                       </div>
                       @endif
-                      <div class="chat" data-chat="person7">
-                      </div>
-                      <div class="chat" data-chat="person8">
-                      </div>
-                      <div class="chat" data-chat="person9">
-                      </div>
-                      <div class="chat" data-chat="person10">
-                      </div>
-                      <div class="chat" data-chat="person11">
-                      </div>
-                      <div class="chat" data-chat="person12">
-                      </div>
+
                     </div>
                   </div>
-                  <div class="chat-footer">
-                    <div class="chat-input">
-                      <form class="chat-form" action="javascript:void(0);">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
-                        <input type="text" class="mail-write-box form-control" placeholder="Message"/>
-                      </form>
+                  <div class="chat-footer chat-active">
+                    <div class="input-group mb-4 " id="send">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/></svg></span>
+                      </div>
+                      <input type="text" class="form-control message" placeholder="message">
+                      <div class="input-group-append">
+                        <button class="btn btn-primary" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send"><line x1="22" y1="2" x2="11" y2="13"/><polygon points="22 2 15 22 11 13 2 9 22 2"/></svg> Send</button>
+                      </div>
                     </div>
+
                     <div class="col mt-5">
+                      @if(owner)
+                      <button class="btn btn-success mb-2 btn-rounded btn-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send"><line x1="22" y1="2" x2="11" y2="13"/><polygon points="22 2 15 22 11 13 2 9 22 2"/></svg> Release coin</button>
                       <button class="btn btn-outline-warning mb-2 btn-rounded btn-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><defs><style>.fa-secondary{opacity:.4}</style></defs><path d="M442.75 182.39L329.61 295.53 290 255.93l-81 81L175 303l81-81-39.6-39.6L329.61 69.26z" class="fa-secondary"/><path d="M169 297.37a31.9 31.9 0 0 0-45.16 0L9.35 412.12a32 32 0 0 0 0 45.25l45.17 45.26a31.91 31.91 0 0 0 45.17 0l114.52-114.75a32 32 0 0 0 0-45.25zm7.49-109.32a23.92 23.92 0 0 0 33.87 0L334.61 63.6a24 24 0 0 0 0-33.94L312 7a23.93 23.93 0 0 0-33.88 0L153.94 131.48a24 24 0 0 0 0 33.94zM504 199.36l-22.6-22.62a23.9 23.9 0 0 0-33.87 0L323.32 301.19a24 24 0 0 0 0 33.94l22.58 22.62a23.91 23.91 0 0 0 33.88 0L504 233.3a24 24 0 0 0 0-33.94z" class="fa-primary"/></svg> Dispute</button>
+                      @else
                       <button class="btn btn-secondary mb-2 btn-rounded btn-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check"><polyline points="20 6 9 17 4 12"/></svg> Mark as paid</button>
+                      <button class="btn btn-outline-danger mb-2 btn-rounded btn-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-circle"><circle cx="12" cy="12" r="10"/><line x1="15" y1="9" x2="9" y2="15"/><line x1="9" y1="9" x2="15" y2="15"/></svg> Cancel trade</button>
+                      @endif
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -204,16 +160,14 @@
             </div>
 
           </div>
-        </div>
-
-
-
-
-
-
 </div>
     </div>
       @include('partials/dashfooter')
-      <script src="/js/apps/mailbox-chat.js"></script>
-     <script src="/form/chat.js"></script>
+  <script>
+    ws.on('open', () => {
+      isConnected = true
+      subscribeToChannel()
+    })
+  </script>
+  <script src="/form/chat.js"></script>
     </div>
