--- a/resources/views/partials/dashfooter.edge
+++ b/resources/views/partials/dashfooter.edge
@@ -48,6 +48,8 @@
 <script src="/plugins/notification/snackbar/snackbar.min.js"></script>
 <script src="/plugins/table/datatable/datatables.js"></script>
 <script src="/plugins/table/datatable/custom_miscellaneous.js"></script>
+<script src="/plugins/countdown/jquery.countdown.js"></script>
+<script src="/js/components/custom-countdown.js"></script>
 <script>
   $("input[name='margin']").TouchSpin({
     postfix: '%',
