--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -32,6 +32,7 @@
   <link href="/plugins/notification/snackbar/snackbar.min.css" rel="stylesheet" type="text/css" />
   <link href="/plugins/animate/animate.css" rel="stylesheet" type="text/css" />
   <link href="/styles/components/custom-modal.css" rel="stylesheet" type="text/css" />
+  <link href="/styles/components/custom-countdown.css" rel="stylesheet" type="text/css">
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 
 </head>
