--- a/resources/views/dashboard/buy.edge
+++ b/resources/views/dashboard/buy.edge
@@ -24,9 +24,9 @@
               <div class="row">
                 <div class="col-lg">
                   <label class="label ml-3" for="coin">Enter amount:</label>
-                  <div class="input-group mb-5">
+                  <div class="input-group mb-5 mr-5">
                     <input type="text" class="form-control form-group-sm ml-3"  aria-label="Recipient's username" aria-describedby="basic-addon2" id="coin" name="coin" required>
-                    <div class="input-group-append">
+                    <div class="input-group-append mr-3">
                       <span class="input-group-text" id="basic-addon6">{{offer.coin}}</span>
                     </div>
                   </div>
