--- a/resources/views/dashboard/chat.edge
+++ b/resources/views/dashboard/chat.edge
@@ -9,14 +9,26 @@
         <div class="row">
           <div class="col text-center">
             <blockquote class="blockquote">
-              Trade status <span class="badge badge-success"> Success </span>
-
+              @if(trade.status==='cancelled')
+              Trade status <span class="badge badge-danger">{{trade.status}} </span>
+              @else
+              Trade status <span class="badge badge-success">{{trade.status}} </span>
+              @endif
+              @if(trade.status==='cancelled')
+              <div class="alert alert-arrow-left alert-icon-left alert-light-danger mb-4 mt-3"
+                   role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><svg> ... </svg></button>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-info"><circle cx="12" cy="12" r="10"/><line x1="12" y1="16" x2="12" y2="12"/><line x1="12" y1="8" x2="12.01" y2="8"/></svg>
+                <strong>Cancelled</strong> This trade was cancelled
+              </div>
+              @else
               <div class="alert alert-arrow-left alert-icon-left alert-light-primary mb-4 mt-3"
                    role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><svg> ... </svg></button>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-info"><circle cx="12" cy="12" r="10"/><line x1="12" y1="16" x2="12" y2="12"/><line x1="12" y1="8" x2="12.01" y2="8"/></svg>
-                <p><b>{{buyer}}</b> to pay <b>{{trade.local_amount}}</b> to <b>{{seller}}</b></p>
+                <p><b>{{buyer}}</b> to pay <b>{{amount}}</b> to <b>{{seller}}</b></p> Once the timer stops the trade will be cancelled automatically if the buyer will not have completed the payment.
               </div>
+              @endif
 
 
               <div class="container mt-3">
@@ -143,26 +155,19 @@
                       @if(chat.length!==0)
                       <div class="chat active-chat" data-chat="person6">
                         <div class="conversation-start">
-                          <span>Monday, 1:27 PM</span>
+                          <span>{{chat_start}}</span>
                         </div>
-                        <div class="bubble you">
-                          <div class="avatar avatar-sm avatar-indicators avatar-online">
-                            <img alt="avatar" src="/images/de.png" class="rounded-circle" />
-                          </div>
-                          Hi, I am back from vacation
-                        </div>
-                        <div class="bubble you">
-                          How are you?
-                        </div>
+                        @each(chats in chat)
+                        @if(chats.user===me)
                         <div class="bubble me">
-                          Welcom Back
+                          {{chats.messages}}
                         </div>
-                        <div class="bubble me">
-                          I am all well
-                        </div>
+                        @else
                         <div class="bubble you">
-                          Coffee?
+                          {{chats.messages}}
                         </div>
+                        @endif
+                        @endeach
                       </div>
                       @else
                       <div class="chat active-chat" data-chat="person6">
@@ -186,12 +191,16 @@
                     </div>
 
                     <div class="col mt-5">
+                      @if(trade.status==='cancelled')
+
+                      @else
                       @if(owner)
                       <button class="btn btn-success mb-2 btn-rounded btn-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send"><line x1="22" y1="2" x2="11" y2="13"/><polygon points="22 2 15 22 11 13 2 9 22 2"/></svg> Release coin</button>
                       <button class="btn btn-outline-warning mb-2 btn-rounded btn-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><defs><style>.fa-secondary{opacity:.4}</style></defs><path d="M442.75 182.39L329.61 295.53 290 255.93l-81 81L175 303l81-81-39.6-39.6L329.61 69.26z" class="fa-secondary"/><path d="M169 297.37a31.9 31.9 0 0 0-45.16 0L9.35 412.12a32 32 0 0 0 0 45.25l45.17 45.26a31.91 31.91 0 0 0 45.17 0l114.52-114.75a32 32 0 0 0 0-45.25zm7.49-109.32a23.92 23.92 0 0 0 33.87 0L334.61 63.6a24 24 0 0 0 0-33.94L312 7a23.93 23.93 0 0 0-33.88 0L153.94 131.48a24 24 0 0 0 0 33.94zM504 199.36l-22.6-22.62a23.9 23.9 0 0 0-33.87 0L323.32 301.19a24 24 0 0 0 0 33.94l22.58 22.62a23.91 23.91 0 0 0 33.88 0L504 233.3a24 24 0 0 0 0-33.94z" class="fa-primary"/></svg> Dispute</button>
                       @else
                       <button class="btn btn-secondary mb-2 btn-rounded btn-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check"><polyline points="20 6 9 17 4 12"/></svg> Mark as paid</button>
                       <button class="btn btn-outline-danger mb-2 btn-rounded btn-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-circle"><circle cx="12" cy="12" r="10"/><line x1="15" y1="9" x2="9" y2="15"/><line x1="9" y1="9" x2="15" y2="15"/></svg> Cancel trade</button>
+                      @endif
                       @endif
                     </div>
                     </div>
@@ -225,6 +234,9 @@
         '</div>'+
         '<h4 class="clock-text"> Sec </h4>'+
         '</div>'));
+    }).on('finish.countdown', function() {
+      ////we end the trade
+console.log('ended')
     });
   </script>
   <script>
